--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <script src="sketch.js"></script>
     <script src="bird.js"></script>
     <script src="pipe.js"></script>
     <script src="libraries/matrix.js"></script>
     <script src="libraries/nn.js"></script>
     <script src="ga.js"></script>
-  </head>
-  <body>
-    <main></main>
   </body>
 </html>
